REGRESSION(r270612) [GStreamer][MSE] Some play/seek related failures https://bugs.webkit.org/show_bug.cgi?id=219822

Patch by Philippe Normand <pnormand@igalia.com> on 2020-12-22
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

Call appendComplete which internally synchronizes the TrackBuffer buffered ranges and calls
m_client->sourceBufferPrivateAppendComplete().

* platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp:
(WebCore::SourceBufferPrivateGStreamer::didReceiveAllPendingSamples):
(WebCore::SourceBufferPrivateGStreamer::appendParsingFailed):

LayoutTests:

Unflag tests now-passing and flag tests that were mis-gardened before this regression happened.

* platform/glib/TestExpectations:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/232653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271056 268f45cc-cd09-0410-ab3c-d52691b4dbfc